@@ -2,3 +2,4 @@
 node_modules/
 model/db copy.js
 routes copy.js
+controllers/testController.js
